# bss-web-file-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
.circleci/: config.yml
.github/workflows/: docker.yml  integration.yml  python.yml  release.yml  scorecard.yml
scripts/: convert-image.sh  convert-poster.sh
src/bss_web_file_server/models/: member.py  video.py
src/bss_web_file_server/services/: image.py
tests-int/: test_health.py
