[project]
name = "bss-web-file-server"
version = "1.0.0"
description = "BSS file server API"
authors = [{ name = "Bence Csik", email = "22349790+csikb@users.noreply.github.com" }]
requires-python = "==3.14.2"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.124.3",
    "pillow==12.0.0",
    # this should be part of standard-no-fastapi-cloud-cli, but is missing:
    # see: https://github.com/fastapi/fastapi/blob/6fae64ff49e8328048872714652a4dfa15406e41/pyproject.toml#L94-L98
    "pydantic-settings==2.12.0",
    # for Python 3.14 compatibility:
    "uvloop>=0.22.0",
    "pydantic_core>=2.40.0",
]

[dependency-groups]
dev = [
    "black==25.12.0",
    "isort==7.0.0",
    "mypy==1.19.0",
    "pylint==4.0.4",
    "pre-commit==4.5.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "testcontainers==4.13.3",
]

[build-system]
requires = ["uv_build==0.9.17"]
build-backend = "uv_build"
module-name = ["bss_web_file_server"]

[tool.pytest]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"

[tool.mypy]
packages = "src"
