[project]
name = "bss-web-file-server"
version = "1.0.0"
description = "BSS file server API"
authors = [{ name = "Bence Csik", email = "22349790+csikb@users.noreply.github.com" }]
requires-python = "==3.14.3"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.134.0",
    "pillow==12.1.1",
    # this should be part of standard-no-fastapi-cloud-cli, but is missing:
    # see: https://github.com/fastapi/fastapi/blob/6fae64ff49e8328048872714652a4dfa15406e41/pyproject.toml#L94-L98
    "pydantic-settings==2.13.1",
    # for Python 3.14 compatibility:
    "uvloop>=0.22.0",
    "pydantic_core>=2.40.0",
]

[dependency-groups]
dev = [
    "black==26.1.0",
    "isort==8.0.0",
    "mypy==1.19.1",
    "pylint==4.0.5",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "testcontainers==4.14.1",
]

[build-system]
requires = ["uv_build==0.10.7"]
build-backend = "uv_build"
module-name = ["bss_web_file_server"]

[tool.pytest]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
profile = "black"

[tool.mypy]
packages = "src"
